Changed main from grid to flex. Alignment needs fixing.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -121,40 +121,25 @@ header nav a:nth-child(4n+3) {
 
 /*  –––––––––––-––– MAIN ––––––––––––––– */
 main {
-    display: grid;
-    grid-template-rows: 1fr 1fr;
-    grid-template-columns: 1fr 2fr;
-    grid-template-areas: 
-        "doctor-explains-1  doctor-slides-1"
-        "doctor-explains-2  doctor-slides-2"
-    ;
+    display: flex;
+    flex-flow: row wrap;
     justify-content: center;
 }
 
 /*  –––––––––––-––– MAIN : doctor-explains ––––––––––––––– */
 .doctor-explains {
     background-color: var(--colour-04);
-    padding: 1em;
-}
-#doctor-explains-1 {
-    grid-area: doctor-explains-1;
-}
-#doctor-explains-2 {
-    grid-area: doctor-explains-2;
+    width: 30%;
 }
 
 /*  –––––––––––-––– MAIN : doctor-slides ––––––––––––––– */
-#doctor-slides-1 {
-    grid-area: doctor-slides-1;
-}
-#doctor-slides-2 {
-    grid-area: doctor-slides-2;
+.doctor-slides {
+    background-color: var(--colour-05);
+    padding: 1em;
+    width: 60%;
 }
 .doctor-slides > article {
     padding: 1em;
-}
-.doctor-slides > article:nth-child(odd) {
-    background-color: var(--colour-05);
 }
 .doctor-slides > article:nth-child(even) {
     background-color: var(--colour-06);
